# OpenGL

./: .$UML.drawio.bkp  .gitignore  CMakeLists.txt  UML.drawio
.cache/clangd/index/: Block.cpp.DFFECB70C24DE91A.idx  Block.h.2FBAAB4526AA9BED.idx  Camera.cpp.ED4C3015B0D2D8CF.idx  Camera.h.EE82D846BB69A0CD.idx  Chunk.cpp.F1E1DAB8F567DFE9.idx  Chunk.h.89C59D3DFFA737E3.idx  IndexBuffer.cpp.29ABF2E000C4FDDF.idx  IndexBuffer.h.35A8D65DDCE86804.idx  Mesh.cpp.A336DF4D36557DE6.idx  Mesh.h.42268CD0792560AC.idx  Renderer.cpp.1A110121EC5C6412.idx  Renderer.h.DB36DDE4FA09C8CC.idx  Shader.cpp.7FCC5D63B5F7403E.idx  Shader.h.1752B8DCAD2D2C45.idx  Texture.cpp.26E85CE34DF80045.idx  Texture.h.84AC7CE577CA50A9.idx  VertexArray.cpp.C77037C17B9CAE22.idx  VertexArray.h.AD75A1CCBB6994D3.idx  VertexBuffer.cpp.0910ED01A346C2D5.idx  VertexBuffer.h.33746D4F8214BF77.idx  VertexBufferLayout.cpp.D333B02E2D01775B.idx  VertexBufferLayout.h.364D4D32C5D84071.idx  _fixes.hpp.1BC0723F906EF1A1.idx  _vectorize.hpp.94FAABADBDE43CAC.idx  common.hpp.F5FD0A25BA62D29C.idx  compute_common.hpp.18EF4309DB24423C.idx  compute_vector_decl.hpp.C2B1C6AE3F154361.idx  compute_vector_relational.hpp.8CBDA880E55FE8BA.idx  constants.hpp.BFCCAB753A1310CC.idx  constants.inl.2998CD64A80784AC.idx  (+142 more)
resources/shaders/: basic.fs  basic.vs
src/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
